[package]
name = "sweetiebot"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-model = "0.13"
twilight-http = { default-features = false, version = "0.13", features = ["native", "simd-json"] }
twilight-gateway = { default-features = false, version = "0.13", features = ["native", "simd-json"] }
twilight-cache-inmemory = "0.13"
twilight-standby = "0.13"
twilight-util = { version = "0.13", features = ["builder"]}
twilight-mention = "0.13"
twilight-interactions = "0.13"
twilight-validate = "0.13"
futures = "0.3"
tokio = { version = "1.20", features = ["full"] }
tokio-stream = "0.1.9"
tokio-util = "0.7.4"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.9"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "brotli", "multipart", "stream"] }
scraper = "0.13"
urlencoding = "2.1"
skia-safe = { version = "0", features = ["textlayout"] }
image = "0.24.3"
wana_kana = "2.0"
include_dir = "0.7.2"
lazy_static = "1.4.0"
itertools = "0.10.3"
bytes = "1"
regex = "1"
substring = "1.4.5"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "mysql", "macros", "migrate", "time", "tls"] }
html-escape = "0.2"
tokio-cron-scheduler = "*"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8.5"
bonsaidb = { version = "0.4", features = ["local-full"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
