[package]
name = "sweetiebot"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-model = "0.14"
twilight-http = { default-features = false, version = "0.14", features = ["native", "simd-json"] }
twilight-gateway = { default-features = false, version = "0.14", features = ["native", "simd-json"] }
twilight-cache-inmemory = "0.14"
twilight-standby = "0.14"
twilight-util = { version = "0.14", features = ["builder"]}
twilight-mention = "0.14"
twilight-interactions = "0.14"
twilight-validate = "0.14"
futures = "0.3"
tokio = { version = "1.22", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.10"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "brotli", "multipart", "stream"] }
scraper = "0.13"
urlencoding = "2.1"
skia-safe = { version = "0", features = ["textlayout"] }
image = "0.24"
wana_kana = "2.1.0"
include_dir = "0.7"
lazy_static = "1.4"
itertools = "0.10.5"
bytes = "1"
regex = "1"
substring = "1.4"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "mysql", "macros", "migrate", "time", "tls"] }
html-escape = "0.2"
tokio-cron-scheduler = "*"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8.5"
bonsaidb = { version = "0.4", features = ["local-full"] }
once_cell = "1.16.0"

[profile.dev.package.sqlx-macros]
opt-level = 3
